# Hdr-Gainmap

./: .gitignore  pyproject.toml  readme.md  requirements.txt
src/: main.py
src/hdr_gainmap/: main.py  preset.py
src/hdr_gainmap/hdrgm/: hdrgm.py  hdrgm_settings.py
src/hdr_gainmap/image/: image_settings.py  image_tools.py
src/hdr_gainmap/uhdr/: uhdr.py  uhdr_settings.py
src/hdr_gainmap/web/: app.py
src/hdrgm/: hdrgm.py  hdrgm_settings.py
src/image/: image_settings.py  image_tools.py
src/uhdr/: uhdr.py  uhdr_metadata.py  uhdr_settings.py
src/web/: app.py
src/web/templates/: index.html
tests/: test_hdr_gainmap.py
web/: app.py
